# CMP5359-Resit-Starter

./: CMakeLists.txt
Rasteriser/: CMakeLists.txt  Rasteriser.cpp
Raytracer/: BVHNode.hpp  CMakeLists.txt  Raytracer.cpp
